* Adds merge logic * Adds merge effect * Chunk remover * Bonemeal security [] Bonemeal permissions [] Bonemeal dispenser usage * Adds recipes * Adds listeners [] Player listener [][] Bonemeal logic [] BlockMergeListener [][] Block Merge logic [] World Listener [][] Bonemeal dispense

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -24,8 +24,13 @@ permissions:
   mergecraft.points.other:
     description: Allows the player to check other player points
 
+  mergecraft.use.bonemeal:
+    description: Allows the player to use bonemeal
+    default: op
+
   mergecraft.*:
     description: Gives access to all MergeCraft permissions
     default: op
     children:
       mergecraft.points: true
+      mergecraft.use.bonemeal: true
