--- a/src/main/resources/recipes.yml
+++ b/src/main/resources/recipes.yml
@@ -1,3 +1,156 @@
 recipes:
-  - POPPY=RED_TULIP
+# Sapling progression
+  - OAK_SAPLING=SPRUCE_SAPLING
+  - SPRUCE_SAPLING=BIRCH_SAPLING
+  - BIRCH_SAPLING=JUNGLE_SAPLING
+  - JUNGLE_SAPLING=ACACIA_SAPLING
+  - ACACIA_SAPLING=DARK_OAK_SAPLING
+# Leaves progression
+  - DARK_OAK_SAPLING=OAK_LEAVES
+  - OAK_LEAVES=SPRUCE_LEAVES
+  - SPRUCE_LEAVES=BIRCH_LEAVES
+  - BIRCH_LEAVES=JUNGLE_LEAVES
+  - JUNGLE_LEAVES=ACACIA_LEAVES
+  - ACACIA_LEAVES=DARK_OAK_SAPLING
+  - DARK_OAK_SAPLING=GRASS
+# Shrub progression
+  - GRASS=FERN
+  - FERN=DEAD_BUSH
+  - DEAD_BUSH=COBWEB
+  - COBWEB=CRIMSON_ROOTS
+  - CRIMSON_ROOTS=WARPED_ROOTS
+  - WARPED_ROOTS=NETHER_SPROUTS
+  - NETHER_SPROUTS=TWISTING_VINES
+# Flower progression
+  - TWISTING_VINES=WITHER_ROSE
+  - WITHER_ROSE=DANDELION
+  - DANDELION=POPPY
+  - POPPY=BLUE_ORCHID
+  - BLUE_ORCHID=ALLIUM
+  - ALLIUM=AZURE_BLUET
+  - AZURE_BLUET=RED_TULIP
   - RED_TULIP=ORANGE_TULIP
+  - ORANGE_TULIP=WHITE_TULIP
+  - WHITE_TULIP=PINK_TULIP
+  - PINK_TULIP=OXEYE_DAISY
+  - OXEYE_DAISY=CORNFLOWER
+  - CORNFLOWER=LILY_OF_THE_VALLEY
+  - LILY_OF_THE_VALLEY=SUGAR_CANE
+# Mushroom progression
+  - SUGAR_CANE=BROWN_MUSHROOM
+  - BROWN_MUSHROOM=RED_MUSHROOM
+  - RED_MUSHROOM=CRIMSON_FUNGUS
+  - CRIMSON_FUNGUS=WARPED_FUNGUS
+# Tall variants
+  - WARPED_FUNGUS=SUNFLOWER
+  - SUNFLOWER=LILAC
+  - LILAC=ROSE_BUSH
+  - ROSE_BUSH=PEONY
+  - PEONY=DEAD_BRAIN_CORAL
+# Aqua progression
+  - LARGE_FERN=DEAD_BRAIN_CORAL
+  - DEAD_BRAIN_CORAL=DEAD_BUBBLE_CORAL
+  - DEAD_BUBBLE_CORAL=DEAD_FIRE_CORAL
+  - DEAD_FIRE_CORAL=DEAD_HORN_CORAL
+  - DEAD_HORN_CORAL=DEAD_TUBE_CORAL
+  - DEAD_TUBE_CORAL=TUBE_CORAL
+  - TUBE_CORAL=BRAIN_CORAL
+  - BRAIN_CORAL=BUBBLE_CORAL
+  - BUBBLE_CORAL=FIRE_CORAL
+  - FIRE_CORAL=HORN_CORAL
+  - HORN_CORAL=DEAD_TUBE_CORAL_FAN
+  - DEAD_TUBE_CORAL_FAN=DEAD_BRAIN_CORAL_FAN
+  - DEAD_BRAIN_CORAL_FAN=DEAD_BUBBLE_CORAL_FAN
+  - DEAD_BUBBLE_CORAL_FAN=DEAD_FIRE_CORAL_FAN
+  - DEAD_FIRE_CORAL_FAN=DEAD_HORN_CORAL_FAN
+  - DEAD_HORN_CORAL_FAN=TUBE_CORAL_FAN
+  - TUBE_CORAL_FAN=BRAIN_CORAL_FAN
+  - BRAIN_CORAL_FAN=BUBBLE_CORAL_FAN
+  - BUBBLE_CORAL_FAN=FIRE_CORAL_FAN
+  - FIRE_CORAL_FAN=HORN_CORAL_FAN
+amounts:
+  - 3=1
+  - 5=2
+  - 8=3
+  - 11=4
+  - 14=5
+  - 17=6
+  - 20=7
+  - 23=8
+  - 26=9
+  - 29=10
+  - 32=11
+  - 35=12
+  - 38=13
+  - 41=14
+  - 44=15
+  - 47=16
+  - 50=17
+  - 53=18
+  - 56=19
+  - 59=20
+  - 62=21
+  - 65=22
+  - 68=23
+  - 71=24
+  - 74=25
+  - 77=26
+  - 80=27
+  - 83=28
+  - 86=29
+  - 89=30
+  - 92=31
+  - 95=32
+  - 98=33
+  - 101=34
+  - 104=35
+  - 107=36
+  - 110=37
+  - 113=38
+  - 116=39
+  - 119=40
+  - 122=41
+  - 125=42
+  - 128=43
+  - 131=44
+  - 134=45
+  - 137=46
+  - 140=47
+  - 143=48
+  - 146=49
+  - 149=50
+  - 152=51
+  - 155=52
+  - 158=53
+  - 161=54
+  - 164=55
+  - 167=56
+  - 170=57
+  - 173=58
+  - 176=59
+  - 179=60
+  - 182=61
+  - 185=62
+  - 188=63
+  - 191=64
+  - 194=65
+  - 197=66
+  - 200=67
+  - 203=68
+  - 206=69
+  - 209=70
+  - 212=71
+  - 215=72
+  - 218=73
+  - 221=74
+  - 224=75
+  - 227=76
+  - 230=77
+  - 233=78
+  - 236=79
+  - 239=80
+  - 242=81
+  - 245=82
+  - 248=83
+  - 251=84
+  - 254=85
