#12 #14 both are related, merging items now gives XP on a curve, these are configurable.

--- a/src/main/resources/recipes.yml
+++ b/src/main/resources/recipes.yml
@@ -1,73 +1,254 @@
 recipes:
-# Sapling progression
-  - OAK_SAPLING=SPRUCE_SAPLING
-  - SPRUCE_SAPLING=BIRCH_SAPLING
-  - BIRCH_SAPLING=JUNGLE_SAPLING
-  - JUNGLE_SAPLING=ACACIA_SAPLING
-  - ACACIA_SAPLING=DARK_OAK_SAPLING
-# Leaves progression
-  - DARK_OAK_SAPLING=OAK_LEAVES
-  - OAK_LEAVES=SPRUCE_LEAVES
-  - SPRUCE_LEAVES=BIRCH_LEAVES
-  - BIRCH_LEAVES=JUNGLE_LEAVES
-  - JUNGLE_LEAVES=ACACIA_LEAVES
-  - ACACIA_LEAVES=DARK_OAK_SAPLING
-  - DARK_OAK_SAPLING=GRASS
-# Shrub progression
-  - GRASS=FERN
-  - FERN=DEAD_BUSH
-  - DEAD_BUSH=COBWEB
-  - COBWEB=CRIMSON_ROOTS
-  - CRIMSON_ROOTS=WARPED_ROOTS
-  - WARPED_ROOTS=NETHER_SPROUTS
-  - NETHER_SPROUTS=TWISTING_VINES
-# Flower progression
-  - TWISTING_VINES=WITHER_ROSE
-  - WITHER_ROSE=DANDELION
-  - DANDELION=POPPY
-  - POPPY=BLUE_ORCHID
-  - BLUE_ORCHID=ALLIUM
-  - ALLIUM=AZURE_BLUET
-  - AZURE_BLUET=RED_TULIP
-  - RED_TULIP=ORANGE_TULIP
-  - ORANGE_TULIP=WHITE_TULIP
-  - WHITE_TULIP=PINK_TULIP
-  - PINK_TULIP=OXEYE_DAISY
-  - OXEYE_DAISY=CORNFLOWER
-  - CORNFLOWER=LILY_OF_THE_VALLEY
-  - LILY_OF_THE_VALLEY=SUGAR_CANE
-# Mushroom progression
-  - SUGAR_CANE=BROWN_MUSHROOM
-  - BROWN_MUSHROOM=RED_MUSHROOM
-  - RED_MUSHROOM=CRIMSON_FUNGUS
-  - CRIMSON_FUNGUS=WARPED_FUNGUS
-# Tall variants
-  - WARPED_FUNGUS=SUNFLOWER
-  - SUNFLOWER=LILAC
-  - LILAC=ROSE_BUSH
-  - ROSE_BUSH=PEONY
-  - PEONY=DEAD_BRAIN_CORAL
-# Aqua progression
-  - LARGE_FERN=DEAD_BRAIN_CORAL
-  - DEAD_BRAIN_CORAL=DEAD_BUBBLE_CORAL
-  - DEAD_BUBBLE_CORAL=DEAD_FIRE_CORAL
-  - DEAD_FIRE_CORAL=DEAD_HORN_CORAL
-  - DEAD_HORN_CORAL=DEAD_TUBE_CORAL
-  - DEAD_TUBE_CORAL=TUBE_CORAL
-  - TUBE_CORAL=BRAIN_CORAL
-  - BRAIN_CORAL=BUBBLE_CORAL
-  - BUBBLE_CORAL=FIRE_CORAL
-  - FIRE_CORAL=HORN_CORAL
-  - HORN_CORAL=DEAD_TUBE_CORAL_FAN
-  - DEAD_TUBE_CORAL_FAN=DEAD_BRAIN_CORAL_FAN
-  - DEAD_BRAIN_CORAL_FAN=DEAD_BUBBLE_CORAL_FAN
-  - DEAD_BUBBLE_CORAL_FAN=DEAD_FIRE_CORAL_FAN
-  - DEAD_FIRE_CORAL_FAN=DEAD_HORN_CORAL_FAN
-  - DEAD_HORN_CORAL_FAN=TUBE_CORAL_FAN
-  - TUBE_CORAL_FAN=BRAIN_CORAL_FAN
-  - BRAIN_CORAL_FAN=BUBBLE_CORAL_FAN
-  - BUBBLE_CORAL_FAN=FIRE_CORAL_FAN
-  - FIRE_CORAL_FAN=HORN_CORAL_FAN
+  - recipe:
+      merge_from: OAK_SAPLING
+      merge_to: SPRUCE_SAPLING
+      exp: 1.0
+  - recipe:
+      merge_from: SPRUCE_SAPLING
+      merge_to: BIRCH_SAPLING
+      exp: 49.0
+  - recipe:
+      merge_from: BIRCH_SAPLING
+      merge_to: JUNGLE_SAPLING
+      exp: 81.0
+  - recipe:
+      merge_from: JUNGLE_SAPLING
+      merge_to: ACACIA_SAPLING
+      exp: 120.0
+  - recipe:
+      merge_from: ACACIA_SAPLING
+      merge_to: DARK_OAK_SAPLING
+      exp: 166.0
+  # Leaves progression
+  - recipe:
+      merge_from: DARK_OAK_SAPLING
+      merge_to: OAK_LEAVES
+      exp: 339.0
+  - recipe:
+      merge_from: OAK_LEAVES
+      merge_to: SPRUCE_LEAVES
+      exp: 408.0
+  - recipe:
+      merge_from: SPRUCE_LEAVES
+      merge_to: BIRCH_LEAVES
+      exp: 483.0
+  - recipe:
+      merge_from: BIRCH_LEAVES
+      merge_to: JUNGLE_LEAVES
+      exp: 563.0
+  - recipe:
+      merge_from: JUNGLE_LEAVES
+      merge_to: ACACIA_LEAVES
+      exp: 649.0
+  - recipe:
+      merge_from: ACACIA_LEAVES
+      merge_to: GRASS
+      exp: 787.0
+  # Shrub progression
+  - recipe:
+      merge_from: GRASS
+      merge_to: FERN
+      exp: 1152.0
+  - recipe:
+      merge_from: FERN
+      merge_to: DEAD_BUSH
+      exp: 1268.0
+  - recipe:
+      merge_from: DEAD_BUSH
+      merge_to: COBWEB
+      exp: 1388.0
+  - recipe:
+      merge_from: COBWEB
+      merge_to: CRIMSON_ROOTS
+      exp: 1513.0
+  - recipe:
+      merge_from: CRIMSON_ROOTS
+      merge_to: WARPED_ROOTS
+      exp: 1643.0
+  - recipe:
+      merge_from: WARPED_ROOTS
+      merge_to: NETHER_SPROUTS
+      exp: 1777.0
+  - recipe:
+      merge_from: NETHER_SPROUTS
+      merge_to: TWISTING_VINES
+      exp: 1915.0
+  # Flower progression
+  - recipe:
+      merge_from: TWISTING_VINES
+      merge_to: WITHER_ROSE
+      exp: 2358.0
+  - recipe:
+      merge_from: WITHER_ROSE
+      merge_to: DANDELION
+      exp: 2515.0
+  - recipe:
+      merge_from: DANDELION
+      merge_to: POPPY
+      exp: 2675.0
+  - recipe:
+      merge_from: POPPY
+      merge_to: BLUE_ORCHID
+      exp: 2840.0
+  - recipe:
+      merge_from: BLUE_ORCHID
+      merge_to: ALLIUM
+      exp: 3010.0
+  - recipe:
+      merge_from: ALLIUM
+      merge_to: AZURE_BLUET
+      exp: 3183.0
+  - recipe:
+      merge_from: AZURE_BLUET
+      merge_to: RED_TULIP
+      exp: 3361.0
+  - recipe:
+      merge_from: RED_TULIP
+      merge_to: ORANGE_TULIP
+      exp: 3543.0
+  - recipe:
+      merge_from: ORANGE_TULIP
+      merge_to: WHITE_TULIP
+      exp: 3729.0
+  - recipe:
+      merge_from: WHITE_TULIP
+      merge_to: PINK_TULIP
+      exp: 3919.0
+  - recipe:
+      merge_from: PINK_TULIP
+      merge_to: OXEYE_DAISY
+      exp: 4113.0
+  - recipe:
+      merge_from: OXEYE_DAISY
+      merge_to: CORNFLOWER
+      exp: 4312.0
+  - recipe:
+      merge_from: CORNFLOWER
+      merge_to: LILY_OF_THE_VALLEY
+      exp: 4514.0
+  - recipe:
+      merge_from: LILY_OF_THE_VALLEY
+      merge_to: SUGAR_CANE
+      exp: 4720.0
+  # Mushroom progression
+  - recipe:
+      merge_from: SUGAR_CANE
+      merge_to: BROWN_MUSHROOM
+      exp: 5363.0
+  - recipe:
+      merge_from: BROWN_MUSHROOM
+      merge_to: RED_MUSHROOM
+      exp: 5586.0
+  - recipe:
+      merge_from: RED_MUSHROOM
+      merge_to: CRIMSON_FUNGUS
+      exp: 5812.0
+  - recipe:
+      merge_from: CRIMSON_FUNGUS
+      merge_to: WARPED_FUNGUS
+      exp: 6042.0
+  # Tall variants
+  - recipe:
+      merge_from: WARPED_FUNGUS
+      merge_to: SUNFLOWER
+      exp: 6755.0
+  - recipe:
+      merge_from: SUNFLOWER
+      merge_to: LILAC
+      exp: 7000.0
+  - recipe:
+      merge_from: LILAC
+      merge_to: ROSE_BUSH
+      exp: 7249.0
+  - recipe:
+      merge_from: ROSE_BUSH
+      merge_to: PEONY
+      exp: 7502.0
+  - recipe:
+      merge_from: PEONY
+      merge_to: DEAD_BRAIN_CORAL
+      exp: 7759.0
+  # Aqua progression
+  - recipe:
+      merge_from: LARGE_FERN
+      merge_to: DEAD_BRAIN_CORAL
+      exp: 8551.0
+  - recipe:
+      merge_from: DEAD_BRAIN_CORAL
+      merge_to: DEAD_BUBBLE_CORAL
+      exp: 8822.0
+  - recipe:
+      merge_from: DEAD_BUBBLE_CORAL
+      merge_to: DEAD_FIRE_CORAL
+      exp: 9097.0
+  - recipe:
+      merge_from: DEAD_FIRE_CORAL
+      merge_to: DEAD_HORN_CORAL
+      exp: 9376.0
+  - recipe:
+      merge_from: DEAD_HORN_CORAL
+      merge_to: DEAD_TUBE_CORAL
+      exp: 9659.0
+  - recipe:
+      merge_from: DEAD_TUBE_CORAL
+      merge_to: TUBE_CORAL
+      exp: 9945.0
+  - recipe:
+      merge_from: TUBE_CORAL
+      merge_to: BRAIN_CORAL
+      exp: 10234.0
+  - recipe:
+      merge_from: BRAIN_CORAL
+      merge_to: BUBBLE_CORAL
+      exp: 10528.0
+  - recipe:
+      merge_from: BUBBLE_CORAL
+      merge_to: FIRE_CORAL
+      exp: 10824.0
+  - recipe:
+      merge_from: FIRE_CORAL
+      merge_to: HORN_CORAL
+      exp: 11125.0
+  - recipe:
+      merge_from: HORN_CORAL
+      merge_to: DEAD_TUBE_CORAL_FAN
+      exp: 11429.0
+  - recipe:
+      merge_from: DEAD_TUBE_CORAL_FAN
+      merge_to: DEAD_BRAIN_CORAL_FAN
+      exp: 11736.0
+  - recipe:
+      merge_from: DEAD_BRAIN_CORAL_FAN
+      merge_to: DEAD_BUBBLE_CORAL_FAN
+      exp: 12048.0
+  - recipe:
+      merge_from: DEAD_BUBBLE_CORAL_FAN
+      merge_to: DEAD_FIRE_CORAL_FAN
+      exp: 12362.0
+  - recipe:
+      merge_from: DEAD_FIRE_CORAL_FAN
+      merge_to: DEAD_HORN_CORAL_FAN
+      exp: 12680.0
+  - recipe:
+      merge_from: DEAD_HORN_CORAL_FAN
+      merge_to: TUBE_CORAL_FAN
+      exp: 13002.0
+  - recipe:
+      merge_from: TUBE_CORAL_FAN
+      merge_to: BRAIN_CORAL_FAN
+      exp: 13327.0
+  - recipe:
+      merge_from: BRAIN_CORAL_FAN
+      merge_to: BUBBLE_CORAL_FAN
+      exp: 13656.0
+  - recipe:
+      merge_from: BUBBLE_CORAL_FAN
+      merge_to: FIRE_CORAL_FAN
+      exp: 13988.0
+  - recipe:
+      merge_from: FIRE_CORAL_FAN
+      merge_to: HORN_CORAL_FAN
+      exp: 14323.0
 amounts:
   - 3=1
   - 5=2
